[package]
name = "intervalues"
version = "0.2.0"
edition = "2021"
description = "Combine valued intervals together efficiently"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/intervalues"
repository = "https://github.com/debruijn/intervalues_rust"
authors = ["Bert de Bruijn"]
keywords = ["intervals"]

[dependencies]
counter = "0.6.0"
defaultmap = "0.6.0"
itertools = "0.13.0"
rand = "0.8.5"
rust_decimal = "1.36.0"
rust_decimal_macros = "1.36.0"
number-general = "0.12.0"
safecast = "0.2.2"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3